[metadata]
name = frp-tunnel
version = 1.1.6
description = Easy SSH tunneling with FRP

[options]
packages = frp_tunnel, frp_tunnel.core
python_requires = >=3.7
install_requires =
    click>=8.0.0
    rich>=12.0.0
    requests>=2.25.0
    pyyaml>=5.4.0
    psutil>=5.8.0

[options.entry_points]
console_scripts =
    ft = frp_tunnel.cli:main
    frp-tunnel = frp_tunnel.cli:main
